# MonkeyUI

./: .gitignore  LICENSE  README.md  README_zh.md  index.html  mainui.py  pyproject.toml  setup.py  sitemap.xml  test_geo.py
examples/: quick_start.py
gallery/: main.py
guide/install/: index.html
monkeyqt/: __init__.py
monkeyqt/common/: enums.py
monkeyqt/components/basic/: button.py  checkbox.py
monkeyqt/components/data/: data_table.py  preview_dialogs.py
monkeyqt/components/feedback/: alert.py  progress_bar.py
monkeyqt/components/form/: auth.py  form.py  input.py  multicombobox.py  slider.py  switch.py  upload.py
monkeyqt/components/layout/: window.py
monkeyqt/components/navigation/: breadcrumb.py  pagination.py  sidebar.py  topbar.py
monkeyqt/designer/: plugins.py
monkeyqt/themes/: adapter.py  engine.py
monkeyui/: __init__.py
monkeyui/components/basic/: button.py  checkbox.py
monkeyui/components/data/: avatar.py  data_table.py  image_compare.py  image_split.py  preview_dialogs.py  table.py
monkeyui/components/feedback/: progress_ring.py
monkeyui/components/form/: auth.py  captcha.py  combobox.py  date_picker.py  input.py  multicombobox.py  slider.py  upload.py
monkeyui/components/layout/: window.py
monkeyui/components/navigation/: dropdown.py  pagination.py  sidebar.py  tabs.py
monkeyui/core/: icons.py  theme.py
monkeyui/designer/: plugins.py
scripts/: create_component.py
search/: search_index.json
