[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monkeyui"
version = "0.1.0"
description = "An Enterprise-grade PySide6 UI Component Library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.4.2",
]

[project.urls]
"Homepage" = "https://github.com/yourname/monkeyui"
