[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monkeyqt"
description = "An Enterprise-grade PySide6 UI Component Library"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "PySide6>=6.4.2",
]

[tool.setuptools.dynamic]
version = { attr = "monkeyqt.__version__" }

[project.urls]
"Homepage" = "https://github.com/luohuabuxiema/MonkeyQt"

[tool.setuptools.packages.find]
include = ["monkeyqt", "monkeyqt.*"]
exclude = ["gallery*", "scripts*", "examples*"]
